# blobtoolkit

./: .bumpversion.cfg  .coveragerc  .gitignore  .gitmodules  .hostbumpversion.cfg  .pipelinebumpversion.cfg  .pre-commit-config.yaml  .prebumpversion.cfg  .pylintrc  .pylintrc_tests  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  README  README.md  README2  basic_math.py  blobtools  bump_full_version.sh  bump_npm_version.sh  bump_version.sh  bump_versions.sh  conftest.py  hello_world.py  math.py  notes.md  package-api.sh  package-ui.sh  pip_install_latest.sh  pre-commit.sh  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py  tmp.tsv  tox.ini  update_wiki.sh
.github/: dependabot.yml
.github/workflows/: build-api.yml  build-blobtoolkit.yml  (+19 more)
databases/: README.md
examples/: assembly.fasta  blast.out  busco.tsv  diamond.out  list.json  meta.yaml
lib/: __init__.py  add.py  basic_math.py  bed.py  blob_db.py  busco.py  cov.py  dataset.py  fasta.py  fetch.py  field.py  file_io.py  filter.py  hits.py  host.py  key.py  link.py  math.py  remove.py  synonyms.py  taxdump.py  taxid.py  text.py  trnascan.py  view.py
src/core/: Cargo.toml  pyproject.toml
src/core/.cargo/: config.toml
src/core/src/: bam.rs  cli.rs  fasta.rs  fastq.rs  io.rs  lib.rs  main.rs  python.rs  run.rs
src/core/test/: dict.txt  test.bam  test.bam.csi  test.py
src/rust/cov-tools/: Cargo.toml  pyproject.toml
src/rust/cov-tools/src/: bam.rs  cli.rs  fasta.rs  fastq.rs  io.rs  lib.rs  main.rs  tmp.rs  utils.rs
src/rust/cov-tools/test/: test.bam.bai  test.list
viewer/: README.md
(+551 files in other folders)
